<resources>
    <string name="app_name">MyInventoryApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Toast message that name is required -->
    <string name="name_required">Book requires a name</string>string>

    <!--Toast message that price is required -->
    <string name="price_required">Book requires a price greater than 0</string>string>

    <!--Toast message that quantity is required -->
    <string name="quantity_required">Book requires a quantity</string>string>

    <!--Toast message that supplier name is required -->
    <string name="supplier_name_required">Supplier name is required</string>string>

    <!--Toast message that supplier phone number is required -->
    <string name="supplier_phone_required">9 digits supplier phone number is required</string>

    <!--Menu Option 1 -->
    <string name="insert_dummy_book">Add Dummy Product</string>

    <!--Menu Option 2 -->
    <string name="delete_all_books">Delete All Books</string>

    <!--Menu Option 3 -->
    <string name="insert_new_book">Add New Book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="edit_activity_title_new_book">Add Book</string>

    <!-- Title for the activity to edit a pet [CHAR LIMIT=20] -->
    <string name="edit_activity_title_edit_book">Edit Book</string>

    <!-- Text hint for title in the edit activity [CHAR LIMIT=30] -->
    <string name="hint_book_title">Title</string>

    <!-- Text hint for price in the edit activity [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price: </string>

    <!-- Text hint for quantity in the edit activity [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- Text hint for Supplier Name in the edit activity [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier\'s Name</string>

    <!-- Text hint for price in the edit activity [CHAR LIMIT=30] -->
    <string name="hint_supplier_number">Supplier\'s Phone Number</string>


    <string name="edit_view_title">Book\'s details</string>
    <string name="currency">$</string>

    <!-- Label for edit menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="save">Save</string>

    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="edit_insert_successful">Book is saved</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="edit_insert_failed">Error with saving the book</string>

    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="edit_update_successful">Book is updated</string>

    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="edit_update_failed">Error with updating the book</string>

    <!-- Toast message in editor when no values inserted [CHAR LIMIT=NONE] -->
    <string name="edit_add_values">Please add value for all of the fields</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="edit_delete_successful">Book is deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="edit_delete_failed">Error with deleting the book</string>

    <!-- Button to Order-->
    <string name="order_button">Order</string>
    <string name="quantity_category">Quantity</string>
    <string name="quantity_limitation">You can\'t set the quantity to less than 0</string>

    <!-- Dialog message when user is leaving EditActivity but didn't save changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard_changes">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing_book">Keep Editing</string>

    <string name="empty_view_text">No book is added to database. To insert a book click on the bottom
        on the right corner of the screen or click Menu on the Top Bar. Please indicate all of
        the fields. Otherwise the book won't be saved.</string>
    <string name="sale_button">Sale</string>
    <string name="supplier_category">Supplier\'s details</string>
    <string name="incorrect_supplier_phone">Incorrect Supplier Phone Number</string>
</resources>
