<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_margin"
    tools:context=".EditActivity">

    <!-- Label -->
    <TextView
        android:id="@+id/title_edit_activity"
        style="@style/CategoryStyle"
        android:text="@string/edit_view_title" />

    <!-- Input fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_edit_activity"
        android:id="@+id/details_views"
        android:orientation="vertical"
        android:paddingLeft="4dp">

        <!-- Title -->
        <EditText
            android:id="@+id/edit_book_title"
            style="@style/EditStyle"
            android:hint="@string/hint_book_title"
            android:inputType="textCapWords" />

        <!-- Price fields -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp">

            <!-- Price -->
            <EditText
                android:id="@+id/edit_price"
                style="@style/EditStyle"
                android:hint="@string/hint_book_price"
                android:inputType="number" />

            <!-- Currency -->
            <TextView
                android:id="@+id/label_price_currency"
                style="@style/EditCurrency"
                android:text="@string/currency" />
        </RelativeLayout>

        <!-- Quantity -->
        <EditText
            android:id="@+id/edit_book_quantity"
            style="@style/EditStyle"
            android:hint="@string/hint_book_quantity"
            android:inputType="number" />

        <!-- Supplier Name-->
        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/EditStyle"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords" />

        <!-- Supplier Phone Number -->
        <EditText
            android:id="@+id/edit_supplier_number"
            style="@style/EditStyle"
            android:hint="@string/hint_supplier_number"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_button"
        android:layout_below="@id/details_views"
        android:layout_centerInParent="true"
        android:text="@string/order_button" />
</RelativeLayout>


