<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D"
        tools:text="Notebook"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_book_price"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#AEB6BD"
            tools:text="5$"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentRight="true">

        <Button
            android:id="@+id/sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_color"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#2B3D4D"
            android:layout_margin="@dimen/buttons_margin"
            android:drawableStart="@drawable/ic_decrease"
            android:drawableLeft="@drawable/ic_decrease"
            android:gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/sale_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hint_book_quantity"
            android:text="@string/hint_book_quantity"
            android:layout_toRightOf="@+id/sale_button"/>

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#AEB6BD"
            android:layout_toRightOf="@+id/sale_button"
            android:layout_below="@+id/hint_book_quantity"
            tools:text="5$"/>
    </RelativeLayout>
</RelativeLayout>